@@ -4,8 +4,9 @@ GNU findutils NEWS - User visible changes.      -*- outline -*- (allout)
 
 ** Bug Fixes
 
-  'find -ignore_readdir_race' now has a race between FTS read and the visiting
-  of the entry when the file was removed. [#45930]
+  'find -ignore_readdir_race' now better handles races between FTS reading a
+  directory and visiting its entries when the file or directory was meanwhile
+  removed. [#45930]
 
   To fix a POSIX compatibility bug, -exec foo Z{} + is no longer a
   complete predicate, because '+' is only a terminator when it follows
